syntax = "proto3";

package task;

option go_package = "task/taskservice";

option java_package = "com.taskservice.protos";
option java_outer_classname = "TaskServiceProto";

service TaskService {
    rpc CreateTask (TaskCreate) returns (Response);
    rpc GetTask (Empty) returns (ListTask);
    rpc UpdatedTask (TaskCreate) returns (Response);

}

message Empty {}

message TaskCreate {
    optional string id = 1;
    string name = 2;
    string description = 3;
    string date = 4;
    bool done = 5;
}

message Task {
    string id = 1;
    string name = 2;
    string description = 3;
    string date = 4;
    bool done = 5;
    string createdAt = 6;
    string updatedAt = 7;
}

message ListTask {
    repeated Task tasks = 1;
}


message Request {
    string name = 1;
}

message Response {
    string message = 1;
}